--- a/nefac-website/src/app/globals.css
+++ b/nefac-website/src/app/globals.css
@@ -7,10 +7,10 @@
   --foreground: #171717;
 }
 
-@media (prefers-color-scheme: white) {
+@media (prefers-color-scheme: dark) {
   :root {
-    --background: #ffffff;
-    --foreground: #0a0a0a;
+    --background: #0a0a0a;
+    --foreground: #ededed;
   }
 }
 
