Final commit for this branch

--- a/nefac-website/src/globals.css
+++ b/nefac-website/src/globals.css
@@ -87,8 +87,6 @@ body {
 
 .alignright {
   float: right;
-  margin-left: 1em;
-  margin-bottom: 0.5em;
   height: auto;
   max-width: 40%;
 }
@@ -100,7 +98,7 @@ body {
 }
 
 .page-title {
-  font-size: 3.6rem;
+  font-size: 64px;
   font-weight: bold;
   text-align: center;
   padding-top: 40px;
@@ -113,7 +111,6 @@ body {
   background-color: #ededed;
   padding: 50px;
   width: 100%;
-  box-sizing: border-box;
 }
 
 .custom-html-content {
@@ -121,26 +118,10 @@ body {
   text-align: left;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 40px;
   padding-top: 40px;
   padding-bottom: 40px;
 }
-
-/* Medium screens */
-@media (min-width: 768px) and (max-width: 1024px) {
-  .custom-html-content {
-    max-width: 50%;
-  }
-}
-
-/* Small screens */
-@media (max-width: 767px) {
-  .custom-html-content {
-    max-width: 90%;
-  }
-}
-
-/* HTML Inside dangerouslySetInnerHTML for singular template */
 
 .custom-html-content h5 {
   font-weight: bold;
@@ -151,9 +132,21 @@ body {
 .custom-html-content h5 img.alignright {
   float: right;
   height: auto;
-  max-width: 40%; /* prevents image from being too large */
+  max-width: 40%;
 }
 
 .custom-html-content a {
   text-decoration: underline;
+}
+
+@media (min-width: 768px) and (max-width: 1024px) {
+  .custom-html-content {
+    max-width: 50%;
+  }
+}
+
+@media (max-width: 767px) {
+  .custom-html-content {
+    max-width: 90%;
+  }
 }
